🔧 remove unnecesary code in devcontainer Dockerfile

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,16 +7,11 @@ RUN apt-get update && \
     apt-get -y install libopencv-dev
 
 # Install Poetry
-ARG POETRY="1.2.2"
+ARG POETRY="1.4.1"
 RUN pip install poetry==${POETRY}
 RUN pip install keyrings.google-artifactregistry-auth==1.0.0
 
-# add credentials to install private repos
-ARG GOOGLE_APPLICATION_CREDENTIALS
-COPY ${GOOGLE_APPLICATION_CREDENTIALS} /${GOOGLE_APPLICATION_CREDENTIALS}
-
 # Install python dependencies using poetry
 COPY pyproject.toml ./
-RUN export GOOGLE_APPLICATION_CREDENTIALS=/${GOOGLE_APPLICATION_CREDENTIALS} \
-    && poetry config virtualenvs.create false \
+RUN poetry config virtualenvs.create false \
     && poetry install --no-interaction --no-ansi --no-root
